--- a/engine/css/base.css
+++ b/engine/css/base.css
@@ -13,7 +13,7 @@ div#rightpanel{background:#f3f3f3; float:left;width:140px;margin-left: -140px; f
 
 div#wrapper{float:left;width:100%; margin-bottom: 2px; }
 div#fWorkspace{margin: 0 102px 0 38px; position: absolute;}
-div#footer{background: #333333; color: #dfdfdf; padding:0px; clear:left; width:100% -10; height: 52px;  font-size: 10px;}
+div#footer{background: #333333; color: #dfdfdf; padding:0px; clear:left; width:100%; height: 52px;  font-size: 10px;}
 
 
 
@@ -162,12 +162,29 @@ div#footer{background: #333333; color: #dfdfdf; padding:0px; clear:left; width:1
 	position: absolute;
 }
 
-.fObject, .fWorkspace.selected div.fObject {
+.fObject {
 	border: 1px solid #cfcfcf;
 	background-color: #ffffff;
 	position: absolute;
 	text-align:center;
 }
+.p1 {
+
+}
+.p2 {
+	background-color: #dfdfdf;
+}
+.p3 {
+	background-color: #bfbfbf;
+}
+.p4 {
+	background-color: #9f9f9f;
+}
+.p5 {
+	background-color: #7f7f7f;
+}
+
+
 .fText {
 	border: 1px solid #ffffff;
 	background-color: #ffffff;
@@ -180,21 +197,19 @@ div#footer{background: #333333; color: #dfdfdf; padding:0px; clear:left; width:1
 	background: url('');
 }
 .fLabelHolder {
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	position: absolute;
-	display: table-cell; vertical-align: middle;
-	font-size: 12px;
-	color: #6f6f6f;
-	top:50%;
-}
-.fLabel {
+	top: 50%;
+	display: inline;
 	position: relative;
-	top:-5px;
+}
+.fLabel  {
+	top: -6px;
+	display: inline;
+	font-size: 10px;
+	color: #9f9f9f;
+	position: relative;
 }
 .fLBracket{
-	
+	color: #6f6f6f;
 }
 
 div.fText:hover,div.fTextHasTxt:hover,div.fObject:hover{
@@ -424,7 +439,7 @@ div.resizable {
 #fFooterTitle {
 	display: inline;
 	float: left;
-	padding: 18 5 0 0;
+	padding: 18px 5px 0 0;
 }
 
 .fFooterDivider {
@@ -434,7 +449,7 @@ div.resizable {
 	
 	display: inline;
 	float: left;
-	padding: 16 5 0 5;
+	padding: 16px 5px 0 5px;
 }
 
 
@@ -466,6 +481,12 @@ textarea {
 	
 	font-size: 9px;
 	font-family: verdana;
+}
+
+.fEditableLabel {
+	width: 65%;
+	border: 1px solid #CFCFCF;
+	display: inline;
 }
 
 
