--- a/engine/css/base.css
+++ b/engine/css/base.css
@@ -57,6 +57,22 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 .fTOrange {
 	color: #FF6600;
 }
+.fTThick2 {
+	font-size: 18px;
+	color: #999999;
+	font-family: verdana;
+	font-weight: bold;
+}
+
+
+/* form elements */
+.fInput {
+	border: 1px solid #000000;
+	background-color: #cccccc;
+	padding: 3px;
+	color: #2f2f2f;
+	letter-spacing: -1px;
+}
 
 
 /* Header */
@@ -76,6 +92,60 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 }
 
 
+/* Notify */
+#fNotify {
+	background: url('../images/bg_instCore.png');
+	position: absolute;
+	height: 30px;
+	left: 39px;
+	z-index: 10000;
+	padding: 10px 10px 0 10px;
+	color: #ffffff;
+	font-size: 18px;
+	font-family: Verdana;
+	display: none;
+	opacity: 0;
+}
+#fNotifyRound {
+	position: absolute;
+	top: 0px;
+	right: -7px;
+}
+
+
+
+/* EditMaster Overlay */
+#fEditMasterOverlay {
+	background: url('../images/bg_editMaster.png');
+	position: absolute;
+	z-index: 10001;
+	width: 100%;
+	height: 100%;
+}
+
+
+/* List */
+.fList {
+	margin: 3px 0 0 0;
+	padding: 0px;
+	list-style: none;
+	border-top: 1px solid #666666;
+}
+.fList li {
+	font: 9px verdana;
+	padding: 3px 0 3px 0;
+	color: #999999;
+	border-bottom: 1px solid #666666;
+}
+.fList li a {
+	color: inherit;
+	text-decoration: none;
+}
+.fList li:hover {
+	background-color: #333333;
+	color: #ffffff;
+	cursor: pointer;
+}
 
 /* Panels */
 .panel {
@@ -86,7 +156,7 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 	position: absolute;
 	right: 0px;
 	height: 100%;
-	z-index: 100000;
+	z-index: 10001;
 }
 #fRightClickMenu {
 	width: 200px;
@@ -94,6 +164,7 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 	border: 1px solid #666666;
 	margin-bottom: 3px;
 	position: absolute;
+	z-index: 10003;
 	right: 0px;
 }
 
@@ -121,21 +192,23 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 .panelArrowUp {
 	display: none;
 	height: 6px;
-	background: #AAB0D7 url('../images/buttonArrowUp_off.gif') no-repeat top center;
+	background: #666666 url('../images/b_arrowUp_off.png') no-repeat top center;
+	cursor: pointer;
 }
 .panelArrowUpHover {
-	background: #616DB4 url('../images/buttonArrowUp_over.gif') no-repeat top center;
+	background: #333333 url('../images/b_arrowUp_over.png') no-repeat top center;
 }
 
 .panelArrowDown {
 	display: none;
 	height: 6px;
-	background: #AAB0D7 url('../images/buttonArrowDown_off.gif') no-repeat top center;
+	background: #666666 url('../images/b_arrowDown_off.png') no-repeat top center;
 	position: relative;
 	bottom: 0px;
+	cursor: pointer;
 }
 .panelArrowDownHover {
-	background: #616DB4 url('../images/buttonArrowDown_over.gif') no-repeat top center;
+	background: #333333 url('../images/b_arrowDown_over.png') no-repeat top center;
 }
 
 
@@ -156,12 +229,13 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 	background-color: #F4F4F4;
 	font-family: verdana;
 	font-size: 9px;
-	color: #616DB4;
+	color: #666666;
 	margin-bottom: 1px;
+	cursor: pointer;
 }
 
 .panelItemSelected {
-	background-color: #616DB4 !important; 
+	background-color: #333333 !important; 
 	color: #ffffff !important;
 }
 
@@ -208,21 +282,10 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 	cursor: default;
 }
 
-.p1 {
-
-}
-.p2 {
-	background-color: #dfdfdf;
-}
-.p3 {
-	background-color: #bfbfbf;
-}
-.p4 {
-	background-color: #9f9f9f;
-}
-.p5 {
-	background-color: #7f7f7f;
-}
+.p1 {}
+.p2 { background-color: #dfdfdf; }
+.p3 { background-color: #5f5f5f; }
+.p4 { background-color: #1f1f1f; }
 
 
 .fText {
@@ -304,55 +367,58 @@ div.fLabel:hover {
 	background-repeat: no-repeat;
 }
 
-.selected,.selectedWorkspace {
-	border-color: #353E6F;
+.selected.fObject,.selectedWorkspace, .selectedTxt {
+	/*border-color: #353E6F;
 	background-image: url('../images/bg_selected.gif');
 	background-position: top right;
 	background-repeat: no-repeat;
+	*/
+	border-color: #2f2f2f;
 }
-
+.selected.fForm {
+	outline: 1px solid #2f2f2f;
+}
 .selectedInst {
-	border-color: #D95700;
-	background-image: url('../images/bg_selectedInst.gif');
+	/*border-color: #D95700;
+	background-image: url('../images/bg_selectedInst.gif');*/
 }
 .selectedTxt {
-	border: 1px solid #cfcfcf;
-	border-color: #353E6F;
-	background-image: url('../images/bg_txt01.png'), url('../images/bg_selected.gif');
-	background-position: top left, top right;
-	background-repeat: repeat-y,no-repeat;
-	position: absolute;
-	font-size: 12px;
+	border: 1px solid;
 }
-	
-.selected div.fInsideMaster {
+
+/*inside items */
+div.selected.fInsideMaster, .selected div.fInsideMaster {
 	border-color: #626FB5;
 }
-.selected div.fInsideInstance {
+div.selected.fInsideInstance, .selected div.fInsideInstance{
 	border-color: #FF6600;
 }
-.selected div.fInsideMasterText {
+div.selectedTxt.fInsideMasterText, .selected div.fInsideMasterText {
 	background: url('../images/bg_txtM01.png') 0px 1px repeat;
 	color: #626FB5;
 }
-.selected div.fInsideInstanceText {
+div.selectedTxt.fInsideInstanceText, .selected div.fInsideInstanceText {
 	background: url('../images/bg_txtI01.png') 0px 1px repeat;
 	color: #FF6600;
 }
 
-input,textarea {
+
+
+.fForm.selected.fInsideMaster, .selected .fForm.fInsideMaster {
+	outline: 1px solid #626FB5;
+}
+
+.fForm.selected.fInsideInstance, .selected .fForm.fInsideInstance  {
+	outline: 1px solid #FF6600;
+}
+
+
+input[type="text"].fForm, textarea.fForm {
 	border: 1px inset #cfcfcf;
 }
-
-input.selected,textarea.selected {
-	border: 1px solid #626FB5;
-
+input[type="button"].fForm, input[type="text"].fForm, select.fForm {
+	width: 100px;
 }
-
-/*.selected input.fInsideMaster {
-	border: 1px solid #626FB5;
-}*/
-
 
 
 
@@ -387,13 +453,11 @@ div.resizable {
 
 /**** Footer Items - separate states *****/
 #fObjInstHolder, #fFooterText, #fNoneSelectedHolder {
-	padding-left: 100px;
+	padding-left: 45px;
 	position: absolute;
 	bottom: 0px;
 	display: none;
-}
-#fNoneSelectedHolder, #fFooterText {
-	padding-bottom: 45px;
+	z-index: 10003;
 }
 #fNoneSelectedHolder {
 	display: block;
@@ -409,7 +473,7 @@ div.resizable {
 	padding-left: 10px;
 }
 .fFInstItem {
-	left: 901px;
+	left: 873px;
 	height: auto;
 	bottom: 0px;
 	position: absolute;
@@ -440,6 +504,7 @@ div.resizable {
 	position: relative;
 }
 
+
 .fFInstTop {
 	height: 7px;
 	width: 200px;
@@ -462,21 +527,15 @@ div.resizable {
 }
 
 
-.fFTop *,.fTThick * {
-	font-size: 18px;
-	color: #999999;
-	font-family: verdana;
-	font-weight: bold;
-}
+
 
 
 /**** Footer Items - particulars *****/
-
 #fFId {
 	width: 100px;
 }
 #fFStates {
-	width: 490px;
+	width: 590px;
 }
 #fFAs {
 	width: 150px;
@@ -487,36 +546,20 @@ div.resizable {
 	padding: 18px 1px 0 1px;
 }
 
-
-
 #fWHXYHolder {
 	padding: 5px 0 0 5px;
 }
 
-
-#fObjLeft, #fInstLeft {
-	width: 3px;
-	height: 100%;
-	display: inline;
-	float: left;
-}
-
-#fObjCore, #fInstCore, #fStates {
+#fInstCore, #fStates {
 	height: 100%;
 	display: inline;
 	float: left;
 	padding: 0 3px 0 3px;
 }
-#fObjCore .fIcons, #fInstCore .fIcons, #fStates .fIcons {
+#fInstCore .fIcons, #fStates .fIcons {
 	padding: 4px 0px 0px 0px;
 }
 
-#fObjRight, #fInstRight {
-	width: 3px;
-	height: 100%;
-	display: inline;
-	float: left;
-}
 
 #fObjName, #fStateName { text-decoration: none; }
 
@@ -526,19 +569,20 @@ div.resizable {
 	padding-top: 16px;
 }
 
-
-#fSInherit,#fSSize,#fSPos,#fSContents,#fSEvents,#fSPriority {
+#fSSize,#fSPos,#fSContents,#fSEvents,#fSTone {
 	display: inline; float: left; padding-right: 15px;
 }
-#fSPriority {
+#fSTone {
 	padding-right: 0px;
 }
-#fSInherit {
-	padding-top: 4px;
-	padding-right: 26px;
-}
 #fSSize {
+	margin-left: 20px;
 	padding-right: 20px;
+}
+#fSMIToggle {
+	position: absolute;
+	left: 660px;
+	width: 110px;
 }
 .fSCheck {
 	display: inline; float: left; padding: 0 0 0 0; margin: 4px 0 0 4px;
@@ -547,10 +591,14 @@ div.resizable {
 	height: 16px;
 	cursor: pointer;
 }
-.fSTitle {
+.fEditingObj div div.fSTitle {
+	padding: 3px 0 0 3px !important;
+}
+.fEditingObj div div.fSTitle, .fSTitle {
 	display: inline; float: left;
-	padding: 3px 0 0 0;
+	padding: 3px 0 0 0px;
 	color: #8C95C8;
+	height: 17px;
 	cursor: pointer;
 }
 .fSInputLetter {
@@ -566,7 +614,7 @@ div.resizable {
 	clear: left;
 	margin-left: 4px;
 }
-.fSInput input {
+.fEditingObj div div.fSInput input, .fSInput input {
 	font-size: 10px; height: 15px; background-color: #626FB5; font-family: arial; border: 1px solid #3F4985; color: #ffffff;  padding: 1px; margin-left: 4px;
 }
 .fSOver {
@@ -586,16 +634,10 @@ div.resizable {
 }
 
 
+
 .fFooterLink {
 	color: #ffffff;
 }
-
-#fFooterTitle {
-	display: inline;
-	float: left;
-	padding: 18px 5px 0 0;
-}
-
 
 
 
@@ -659,6 +701,35 @@ div.resizable {
 	background: #333333; color: #dfdfdf; padding:5px;
 }
 
+
+/* SaveLoad Manager Stuff */
+#fSaveLoadManager {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	width: 205px;
+	z-index: 10001;
+	display: none;
+}
+.fSLCore {
+	background: #4c4c4c;
+	padding: 20px 0px 5px 10px;
+}
+.fSLBottom {
+	background: url('../images/bg_SL.png') no-repeat bottom left;
+	height: 7px;
+}
+#fSLSave, #fSLLoad {
+	display: none;
+}
+#fTaken {
+	color: #333333;
+	position: absolute;
+	right: 43px;
+	display: none;
+}
+
+
 /* Idea Manager Stuff */
 #fIdeaManager {
 	position: absolute;
@@ -686,7 +757,7 @@ div.resizable {
 	position: relative;
 }
 
-#fIMBottom {
+.fIMBottom {
 	height: 7px;
 	width: 103px;
 	background: url('../images/bg_imBottom.png');
