--- a/engine/css/base.css
+++ b/engine/css/base.css
@@ -71,10 +71,10 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 	color: #333333;
 }
 .fTBlue {
-	color: #8C92C5;
+	color: #8C92C5 !important;
 }
 .fTOrange {
-	color: #FF6600;
+	color: #FF6600 !important;
 }
 .fTThick2 {
 	font-size: 18px;
@@ -298,7 +298,7 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 }
 
 .fObject {
-	border: 1px dashed #cfcfcf;
+	border: 1px solid #dfdfdf;
 	background-color: #ffffff;
 	position: absolute;
 	text-align:center;
@@ -311,6 +311,7 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 .fForm {
 	position: absolute;
 	cursor: default;
+	opacity: 0.5;
 }
 
 .p1 {}
@@ -382,31 +383,11 @@ div.fLabel:hover {
 	position:absolute;
 	top: 0px;
 	left: 0px;
-	outline: 3px solid #cfcfcf;
-	outline-offset: -2px;
+	outline: 3px solid #000000;
+	outline-offset: 0px;
 	text-align: left;
 	width: 100%;
 	height: 100%;
-}
-.fHmaster {
-	outline-color: #626FB5;
-}
-.fHinstance {
-	outline-color: #FF6600;
-}
-.fHighlightArrow {
-	position:absolute;
-	top: 0px;
-	left: 0px;
-	margin-left: -100px;
-	margin-top: 10px;
-	text-align: left;
-	z-index: 100000;
-}
-.fHARight {
-   margin-left: 5px;
-   text-align: left;
-   left: 0px;
 }
 
 .parent {
@@ -421,10 +402,11 @@ div.fLabel:hover {
 	background-position: top right;
 	background-repeat: no-repeat;
 	*/
-	border-color: #1f1f1f;
+	border-color: #0f0f0f;
 }
 .selected.fForm {
 	outline: 1px solid #2f2f2f;
+	opacity: 1;
 }
 .selectedInst {
 	/*border-color: #D95700;
@@ -454,10 +436,12 @@ div.selectedTxt.fInsideInstanceText, .selected div.fInsideInstanceText {
 
 .fForm.selected.fInsideMaster, .selected .fForm.fInsideMaster {
 	outline: 1px solid #626FB5;
+	opacity: 1;
 }
 
 .fForm.selected.fInsideInstance, .selected .fForm.fInsideInstance  {
 	outline: 1px solid #FF6600;
+	opacity: 1;
 }
 
 
