--- a/engine/css/base.css
+++ b/engine/css/base.css
@@ -20,17 +20,17 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 
 /* Header */
 #fProjName, #fThreadName {
-	margin-top: 7px;	
+		
 }
 #hTitle {
 	position: absolute;
 	left: 240px;
 	top: 0px;
 	height: 100%;
-	
 }
-#hTitle * {
+#hTitle > * {
 	float: left;
+	margin-top: 7px;
 }	
 .hButton {
 	padding: 0 5px 0 0;
@@ -272,13 +272,13 @@ div#footer{background: #f3f3f3; color: #dfdfdf; padding:0px; clear:left; width:1
 
 
 .panelItem, #fRightClickMenu div {
-	padding: 1px;
+	padding: 2px;
 	padding-left:4px;
 	background-color: #F4F4F4;
 	font-family: verdana;
 	font-size: 9px;
 	color: #666666;
-	margin-bottom: 1px;
+	
 	cursor: pointer;
 }
 
@@ -692,15 +692,10 @@ div.resizable {
 
 
 .fEditable {
-	display: block;
-	width: 100%;
-	height: 15px;
-	border-top: 1px solid #CFCFCF;
-	border-bottom: 1px solid #CFCFCF;
+	border: 1px solid #cccccc;
 	background-color: #ffffff;
-	padding-left: 4px;
-	padding-top: 0px;
-	
+	padding: 1px;
+	padding-left: 2px;
 	font-size: 9px;
 	font-family: verdana;
 }
