Load Local Works. Save Local Works. Session Works. Input blur/focus fix.

--- a/engine/css/base.css
+++ b/engine/css/base.css
@@ -754,7 +754,7 @@ div.resizable {
 
 
 /* SaveLoad Manager Stuff */
-#fSaveLoadManager {
+#fSaveLoad {
 	position: absolute;
 	top: 0px;
 	right: 0px;
